sources/api/schnauzer/tests/templates/fails/00_invalid_toml.template
[required-extensions
unclosed-brackets = "above"
+++
noparse
